# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DUPLICATION_REPORT.md  GAP_REPORT.md  Lies.md  README.md  Resources.md  SECURITY.md  SPEC01.md  TODO.md  deno.json
.cargo/: config.toml
.codeviz/Untitled 1/: Untitled-1.md
.github/workflows/: bundle-app.yml  ci.yml  deploy-site.yml  release.yml  rust-clippy.yml
apps/system-monitor/: deno.json
apps/text-editor/: manifest.app.toml
apps/todo-app/: deno.json
apps/wasm-forge-example/: manifest.app.toml
apps/weather-app/: deno.json  (+1 more)
crates/ext_app/: Cargo.toml  build.rs
crates/ext_app/src/: lib.rs
crates/ext_app/ts/: init.ts
crates/ext_codesign/: Cargo.toml  build.rs
crates/ext_codesign/src/: lib.rs  os_linux.rs  os_mac.rs  os_windows.rs
crates/ext_codesign/ts/: init.ts
crates/ext_crypto/: Cargo.toml  build.rs
crates/ext_crypto/src/: lib.rs
crates/ext_crypto/ts/: init.ts
crates/ext_database/: Cargo.toml  README.md  build.rs
crates/ext_database/src/: lib.rs
crates/ext_database/ts/: init.ts
crates/ext_debugger/: Cargo.toml  README.md  build.rs
crates/ext_debugger/src/: inspector.rs  lib.rs
crates/ext_debugger/ts/: init.ts
crates/ext_display/: Cargo.toml  build.rs
crates/ext_display/src/: lib.rs
crates/ext_display/ts/: init.ts
crates/ext_dock/: Cargo.toml  build.rs
crates/ext_dock/src/: lib.rs
crates/ext_dock/ts/: init.ts
crates/ext_encoding/: Cargo.toml  build.rs
crates/ext_encoding/src/: lib.rs
crates/ext_encoding/ts/: init.ts
crates/ext_etcher/: Cargo.toml  build.rs
crates/ext_etcher/src/: lib.rs
crates/ext_etcher/ts/: init.ts
crates/ext_fs/: Cargo.toml  README.md  build.rs
crates/ext_fs/js/: init.js  init.ts
crates/ext_fs/src/: lib.rs
crates/ext_fs/ts/: init.ts
crates/ext_image_tools/: Cargo.toml  build.rs
crates/ext_image_tools/src/: fixtures.rs  lib.rs
crates/ext_image_tools/src/convert/: favicon.rs  ico.rs  mod.rs  svg2png.rs
crates/ext_image_tools/src/png/: mod.rs  png.rs
crates/ext_image_tools/src/svg/: mod.rs  svg.rs
crates/ext_image_tools/src/transform/: crop.rs  mod.rs  resize.rs  scale.rs
crates/ext_image_tools/src/webp/: mod.rs  webp.rs
crates/ext_image_tools/ts/: init.ts
crates/ext_ipc/: Cargo.toml  build.rs
crates/ext_ipc/src/: lib.rs
crates/ext_ipc/ts/: init.ts
crates/ext_lock/: Cargo.toml  build.rs
crates/ext_lock/src/: lib.rs
crates/ext_lock/ts/: init.ts
crates/ext_log/: Cargo.toml  build.rs
crates/ext_log/src/: lib.rs
crates/ext_log/ts/: init.ts
crates/ext_monitor/: Cargo.toml  README.md  build.rs
crates/ext_monitor/src/: lib.rs
crates/ext_monitor/ts/: init.ts
crates/ext_net/: Cargo.toml  build.rs
crates/ext_net/js/: init.js
crates/ext_net/src/: lib.rs
crates/ext_net/ts/: init.ts
crates/ext_process/: Cargo.toml  README.md  build.rs
crates/ext_process/js/: init.js
crates/ext_process/src/: lib.rs
crates/ext_process/ts/: init.ts
crates/ext_protocol/: Cargo.toml  build.rs
crates/ext_protocol/src/: lib.rs  os_linux.rs  os_mac.rs  os_windows.rs
crates/ext_protocol/ts/: init.ts
crates/ext_shell/: Cargo.toml  README.md  build.rs
crates/ext_shell/src/: lib.rs  mod.rs  parser.rs
crates/ext_shell/src/shell/: child_process_tracker.rs  execute.rs  fs_util.rs  mod.rs  types.rs  which.rs
crates/ext_shell/src/shell/commands/: args.rs  cat.rs  cd.rs  cp_mv.rs  echo.rs  executable.rs  exit.rs  export.rs  head.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  sleep.rs  unset.rs  xargs.rs
crates/ext_shell/ts/: init.ts
crates/ext_signals/: Cargo.toml  build.rs
crates/ext_signals/src/: lib.rs
crates/ext_signals/ts/: init.ts
crates/ext_storage/: Cargo.toml  README.md  build.rs
crates/ext_storage/src/: lib.rs
crates/ext_storage/ts/: init.ts
crates/ext_sys/: Cargo.toml  build.rs
crates/ext_sys/js/: init.js  init.ts
crates/ext_sys/src/: lib.rs
crates/ext_sys/ts/: init.ts
crates/ext_timers/: Cargo.toml  build.rs
crates/ext_timers/src/: lib.rs
crates/ext_timers/ts/: init.ts
crates/ext_trace/: Cargo.toml  README.md  build.rs
crates/ext_trace/src/: lib.rs
crates/ext_trace/ts/: init.ts
crates/ext_ui/: Cargo.toml  build.rs
crates/ext_ui/js/: init.js  init.ts
crates/ext_ui/src/: lib.rs
crates/ext_ui/ts/: init.ts
crates/ext_updater/: Cargo.toml  build.rs
crates/ext_updater/src/: lib.rs
crates/ext_updater/ts/: init.ts
crates/ext_wasm/: Cargo.toml  README.md  build.rs
crates/ext_wasm/js/: init.js  init.ts
crates/ext_wasm/src/: lib.rs
crates/ext_wasm/ts/: init.ts
crates/ext_web_inspector/: Cargo.toml  build.rs
crates/ext_web_inspector/src/: lib.rs
crates/ext_web_inspector/src/bridge/: mod.rs
crates/ext_web_inspector/src/cdp/: mod.rs  router.rs
crates/ext_web_inspector/src/panels/: forge-panel.css  forge-panel.html  forge-panel.js
crates/ext_web_inspector/src/platform/: mod.rs
crates/ext_web_inspector/ts/: init.ts
crates/ext_webview/: Cargo.toml  README.md  build.rs
crates/ext_webview/src/: lib.rs
crates/ext_webview/ts/: init.ts
docs/: DOCUMENTATION.md  DOCUMENTATION_PROGRESS.md  DOCUMENTATION_STYLE_GUIDE.md  DOCUMENTATION_TEMPLATES.md  PERFORMANCE.md  TROUBLESHOOTING.md  TYPE_MAPPING.md  architecture.md  getting-started.md
scripts/: generate-rust-docs.sh  install.sh
sdk/: host.d.ts  host.fs.ts  host.ipc.ts  host.net.ts  host.process.ts  host.sys.ts  host.ui.ts  host.wasm.ts  host.window.ts  preload.js  preload.ts  runtime.app.ts  runtime.bundler.ts  runtime.codesign.ts  runtime.crypto.ts  runtime.database.ts  runtime.debugger.ts  runtime.devtools.ts  runtime.display.ts  runtime.dock.ts  runtime.etcher.ts  runtime.fs.ts  runtime.image_tools.ts  runtime.ipc.ts  runtime.lock.ts  runtime.log.ts  runtime.monitor.ts  runtime.net.ts  runtime.os_compat.ts  runtime.path.ts  runtime.process.ts  runtime.protocol.ts  runtime.shell.ts  runtime.shortcuts.ts  runtime.signals.ts  runtime.storage.ts  runtime.svelte.ts  runtime.sys.ts  runtime.timers.ts  runtime.trace.ts  (+6 more)
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+374 files in other folders)
