[workspace]
members = [
  "crates/ext_app",
  "crates/ext_crypto",
  "crates/ext_database",
  "crates/ext_debugger",
  "crates/ext_devtools",
  "crates/ext_display",
  "crates/ext_fs",
  "crates/ext_ipc",
  "crates/ext_lock",
  "crates/ext_log",
  "crates/ext_monitor",
  "crates/ext_net",
  "crates/ext_os_compat",
  "crates/ext_path",
  "crates/ext_process",
  "crates/ext_protocol",
  "crates/ext_shell",
  "crates/ext_shortcuts",
  "crates/ext_signals",
  "crates/ext_storage",
  "crates/ext_sys",
  "crates/ext_timers",
  "crates/ext_trace",
  "crates/ext_updater",
  "crates/ext_wasm",
  "crates/ext_webview",
  "crates/ext_window",
  "crates/forge_cli",
  "crates/forge-runtime",
  "crates/forge-weld",
  "crates/forge-weld-macro",
]
resolver = "2"
