[package]
name = "ext_app"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
deno_core = "0.373"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
deno_error = "0.7"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "process"] }
dirs = "5"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation"] }

[build-dependencies]
forge-weld = { path = "../forge-weld" }
