[package]
name = "ext_database"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
deno_core = "0.373"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
