[package]
name = "ext_database"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false
build = "build.rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"
dirs = "5"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
