[package]
name = "ext_debugger"
version = "0.1.0-alpha.1"
edition = "2021"
description = "V8 Inspector Protocol debugger extension for Forge runtime"
license = "MIT"
publish = false
build = "build.rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
linkme = "0.3"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }

[build-dependencies]
forge-weld = { path = "../forge-weld" }
