[package]
name = "ext_display"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false
build = "build.rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tao = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
forge-weld = { path = "../forge-weld" }

[lib]
crate-type = ["lib"]
