[package]
name = "ext_dock"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Forge Dock extension - macOS dock customization (icon, badge, bounce, menu)"
license = "MIT"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[lib]
name = "ext_dock"

[dependencies]
deno_core = "0.373"
deno_error = "0.7"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
image = "0.25"
tokio = { version = "1", features = ["sync"] }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
