[package]
name = "ext_fs"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
anyhow = "1"
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6.0", default-features = false, features = ["macos_kqueue"] }
globset = "0.4"
tracing = "0.1"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
