[package]
name = "ext_fs"
version = "0.1.0-alpha.1"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
anyhow = "1"
deno_core = "0.373"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
deno_error = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6.0", default-features = false, features = ["macos_kqueue"] }
globset = "0.4"
tracing = "0.1"
tempfile = "3"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
