[package]
name = "ext_ipc"
version = "0.1.0-alpha.1"
edition = "2021"
build = "build.rs"

[dependencies]
deno_core = "*"
deno_error = "*"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
