[package]
name = "ext_ipc"
version = "0.1.0-alpha.1"
edition = "2021"
build = "build.rs"

[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
