[package]
name = "ext_process"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[build-dependencies]
forge-weld = { path = "../forge-weld" }
