[package]
name = "ext_shell"
version = "0.1.0-alpha.1"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["process", "sync", "io-util", "time"] }
open = "5"
trash = "4"
linkme = "0.3"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }

# Shell execution dependencies
monch = "0.5"
glob = "0.3"
which = "7"
futures = "0.3"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation"] }
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
forge-weld = { path = "../forge-weld" }
