[package]
name = "ext_signals"
version = "0.1.0-alpha.1"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
deno_core = "0.373"
deno_error = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt", "signal", "sync"] }
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
