[package]
name = "ext_storage"
version = "0.1.0-alpha.1"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["fs", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
