[package]
name = "ext_sys"
version = "0.1.0-alpha.1"
edition = "2021"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"
deno_error = "0.7"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.3"
arboard = "3"
tracing = "0.1"
dirs = "5"
tokio = { version = "1", features = ["rt", "sync"] }
battery = "0.7"
sys-locale = "0.3"

[target.'cfg(not(target_os = "macos"))'.dependencies]
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
