[package]
name = "ext_wasm"
version = "0.1.0-alpha.1"
edition = "2021"
description = "WebAssembly extension for Forge apps"
license = "MIT"

[dependencies]
deno_core = "*"
deno_error = "*"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

# WebAssembly runtime
wasmtime = "27"
wasmtime-wasi = "27"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
