[package]
name = "ext_wasm"
version = "0.1.0-alpha.1"
edition = "2021"
description = "WebAssembly extension for Forge apps"
license = "MIT"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]
[dependencies]
deno_core = "0.373"
deno_error = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
forge-weld = { path = "../forge-weld" }
forge-weld-macro = { path = "../forge-weld-macro" }
linkme = "0.3"

# WebAssembly runtime
wasmtime = "27"
wasmtime-wasi = "27"

[build-dependencies]
forge-weld = { path = "../forge-weld" }
